fixed button text centering on smaller screens...test need to load to GH pages to view properly

--- a/src/style.css
+++ b/src/style.css
@@ -38,13 +38,15 @@
 #mfpanel > button{
     background-color: black;
     color: white;
-    gap:20px;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0 0 0 5px #000000,
     inset 0 0 0 1px #fff;
     width: 60px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
